<resources>
    <string name="app_name">VocabularyTrainerApp</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">Home</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_title_dialog">Create new Vocabulary</string>
    <string name="text_subtitle_dialog">In this dialog, you can create a new Vocabulary</string>
    <string name="text_native_word">Native Word</string>
    <string name="text_foreign_word">Foreign Word</string>
    <string name="btn_save">save</string>
    <string name="btn_abort">Abort</string>
</resources>
